Fix badge alignment

--- a/src/pages/Essay/stylesheet.scss
+++ b/src/pages/Essay/stylesheet.scss
@@ -88,6 +88,7 @@ $width-sidebar: 20rem;
             height: $font-size-medium;
             border-radius: $font-size-medium;
             background-color: $color-highlight;
+            line-height: $font-size-medium;
             color: white;
             font-weight: bold;
             font-size: .6rem;
